<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/lightGreen">
    <TextView
        android:id="@+id/text_view_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_scale"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/button_scale"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_scale"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@color/red" />
    <TextView
        android:id="@+id/text_view_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_rotate"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/button_rotate"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_rotate"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@color/red" />
    <TextView
        android:id="@+id/text_view_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_translate"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/button_translate"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_translate"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@color/red" />
    <TextView
        android:id="@+id/text_view_alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_alpha"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/button_alpha"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_alpha"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@color/red" />
</LinearLayout>
